--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G11_list_impact_of_multiple_part_ops.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G11_list_impact_of_multiple_part_ops.yaml
@@ -28,12 +28,14 @@ microbenchmark:
             - DROP TABLE IF EXISTS projects_sales;
             - DROP TABLE IF EXISTS projects_eng;
             - DROP TABLE IF EXISTS projects_hr;
+            - DROP TABLE IF EXISTS projects_fin;
             - DROP TABLE IF EXISTS projects_default;
 
             - create table projects_with_part (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
             - CREATE TABLE projects_sales PARTITION OF projects_with_part FOR VALUES IN ('Sales');
             - CREATE TABLE projects_eng PARTITION OF projects_with_part FOR VALUES IN ('Engineering');
             - CREATE TABLE projects_hr PARTITION OF projects_with_part FOR VALUES IN ('HR');
+            - CREATE TABLE projects_fin PARTITION OF projects_with_part FOR VALUES IN ('Finance');
             - CREATE TABLE projects_default PARTITION OF projects_with_part DEFAULT;
 
             - create table projects_without_part (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
@@ -44,6 +46,7 @@ microbenchmark:
             - DROP TABLE IF EXISTS projects_sales;
             - DROP TABLE IF EXISTS projects_eng;
             - DROP TABLE IF EXISTS projects_hr;
+            - DROP TABLE IF EXISTS projects_fin;
             - DROP TABLE IF EXISTS projects_default;
         loadRules:
             - table: projects_with_part
@@ -57,7 +60,7 @@ microbenchmark:
                     params: [1, 20]
                   - name: dept
                     util: SeqStringGenFromArray
-                    params: ['Sales','Engineering','HR','Anonymous']
+                    params: ['Sales','Engineering','HR','Finance','Anonymous']
                   - name: created_at
                     util: CyclicSeqDateGen
                     params: [2001,2025]
@@ -73,7 +76,7 @@ microbenchmark:
                     params: [1, 20]
                   - name: dept
                     util: SeqStringGenFromArray
-                    params: ['Sales','Engineering','HR','Anonymous']
+                    params: ['Sales','Engineering','HR','Finance','Anonymous']
                   - name: created_at
                     util: CyclicSeqDateGen
                     params: [2001,2025]
@@ -90,7 +93,7 @@ microbenchmark:
                         - query: SELECT * FROM projects_with_part where dept=? or dept=?;
                           bindings:
                               - util: OneStringFromArray
-                                params: ['Sales','Engineering']
+                                params: ['Sales','Engineering','Finance']
                               - util: OneStringFromArray
                                 params: ['HR','Anonymous']
 
@@ -102,7 +105,7 @@ microbenchmark:
                         - query: SELECT * FROM projects_without_part where dept=? or dept=?;
                           bindings:
                               - util: OneStringFromArray
-                                params: ['Sales','Engineering']
+                                params: ['Sales','Engineering','Finance']
                               - util: OneStringFromArray
                                 params: ['HR','Anonymous']
                               
@@ -118,7 +121,7 @@ microbenchmark:
                               - util: RandomAString
                                 params: [1, 20]
                               - util: SeqStringGenFromArray
-                                params: ['Sales','Engineering','HR','Anonymous']
+                                params: ['Sales','Engineering','HR','Finance','Anonymous']
                               - util: CyclicSeqDateGen
                                 params: [2001,2025]
             
@@ -134,19 +137,49 @@ microbenchmark:
                               - util: RandomAString
                                 params: [1, 20]
                               - util: SeqStringGenFromArray
-                                params: ['Sales','Engineering','HR','Anonymous']
+                                params: ['Sales','Engineering','HR','Finance','Anonymous']
                               - util: CyclicSeqDateGen
                                 params: [2001,2025]
+
+            - workload: delete_with_part
+              run:
+                  - name: delete_with_part
+                    weight: 100
+                    queries:
+                        - query: delete from projects_with_part where (dept=? or dept=?) and id between ?*100+1 and ?*100+100;
+                          bindings:
+                              - util: OneStringFromArray
+                                params: ['Sales','Engineering','Finance']
+                              - util: OneStringFromArray
+                                params: ['HR','Anonymous']
+                              - count: 2
+                                util: PrimaryIntGen
+                                params: [0, 999]
+
+            - workload: delete_without_part
+              run:
+                  - name: delete_without_part
+                    weight: 100
+                    queries:
+                        - query: delete from projects_without_part where (dept=? or dept=?) and id between ?*100+1 and ?*100+100;
+                          bindings:
+                              - util: OneStringFromArray
+                                params: ['Sales','Engineering','Finance']
+                              - util: OneStringFromArray
+                                params: ['HR','Anonymous']
+                              - count: 2
+                                util: PrimaryIntGen
+                                params: [0, 999]
 
             - workload: update_with_part
               run:
                   - name: update_with_part
                     weight: 100
                     queries:
-                        - query: update projects_with_part set id=id+100000 where dept=? or dept=?;
+                        - query: update projects_with_part set id=id+500000 where dept=? or dept=?;
                           bindings:
                               - util: OneStringFromArray
-                                params: ['Sales','Engineering']
+                                params: ['Sales','Engineering','Finance']
                               - util: OneStringFromArray
                                 params: ['HR','Anonymous']
 
@@ -155,33 +188,9 @@ microbenchmark:
                   - name: update_without_part
                     weight: 100
                     queries:
-                        - query: update projects_without_part set id=id+100000 where dept=? or dept=?;
+                        - query: update projects_without_part set id=id+500000 where dept=? or dept=?;
                           bindings:
                               - util: OneStringFromArray
-                                params: ['Sales','Engineering']
-                              - util: OneStringFromArray
-                                params: ['HR','Anonymous']
-
-            - workload: delete_with_part
-              run:
-                  - name: delete_with_part
-                    weight: 100
-                    queries:
-                        - query: delete from projects_with_part where dept=? or dept=?;
-                          bindings:
-                              - util: OneStringFromArray
-                                params: ['Sales','Engineering']
-                              - util: OneStringFromArray
-                                params: ['HR','Anonymous']
-
-            - workload: delete_without_part
-              run:
-                  - name: delete_without_part
-                    weight: 100
-                    queries:
-                        - query: delete from projects_without_part where dept=? or dept=?;
-                          bindings:
-                              - util: OneStringFromArray
-                                params: ['Sales','Engineering']
+                                params: ['Sales','Engineering','Finance']
                               - util: OneStringFromArray
                                 params: ['HR','Anonymous']
