--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G2_composite_fk_parent_part_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G2_composite_fk_parent_part_parent_operations.yaml
@@ -33,11 +33,13 @@ microbenchmark:
             - DROP TABLE IF EXISTS projects_sales1;
             - DROP TABLE IF EXISTS projects_eng1;
             - DROP TABLE IF EXISTS projects_hr1;
+            - DROP TABLE IF EXISTS projects_fin1;
             - DROP TABLE IF EXISTS projects_default1;
 
             - DROP TABLE IF EXISTS projects_sales2;
             - DROP TABLE IF EXISTS projects_eng2;
             - DROP TABLE IF EXISTS projects_hr2;
+            - DROP TABLE IF EXISTS projects_fin2;
             - DROP TABLE IF EXISTS projects_default2;
 
             - DROP INDEX IF EXISTS fk_index1;
@@ -47,12 +49,14 @@ microbenchmark:
             - CREATE TABLE projects_sales1 PARTITION OF projects_with_part_with_fk FOR VALUES IN ('Sales');
             - CREATE TABLE projects_eng1 PARTITION OF projects_with_part_with_fk FOR VALUES IN ('Engineering');
             - CREATE TABLE projects_hr1 PARTITION OF projects_with_part_with_fk FOR VALUES IN ('HR');
+            - CREATE TABLE projects_fin1 PARTITION OF projects_with_part_with_fk FOR VALUES IN ('Finance');
             - CREATE TABLE projects_default1 PARTITION OF projects_with_part_with_fk DEFAULT;
 
             - create table projects_with_part_without_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
             - CREATE TABLE projects_sales2 PARTITION OF projects_with_part_without_fk FOR VALUES IN ('Sales');
             - CREATE TABLE projects_eng2 PARTITION OF projects_with_part_without_fk FOR VALUES IN ('Engineering');
             - CREATE TABLE projects_hr2 PARTITION OF projects_with_part_without_fk FOR VALUES IN ('HR');
+            - CREATE TABLE projects_fin2 PARTITION OF projects_with_part_without_fk FOR VALUES IN ('Finance');
             - CREATE TABLE projects_default2 PARTITION OF projects_with_part_without_fk DEFAULT;
 
             - create table projects_without_part_with_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
@@ -76,11 +80,13 @@ microbenchmark:
             - DROP TABLE IF EXISTS projects_sales1;
             - DROP TABLE IF EXISTS projects_eng1;
             - DROP TABLE IF EXISTS projects_hr1;
+            - DROP TABLE IF EXISTS projects_fin1;
             - DROP TABLE IF EXISTS projects_default1;
 
             - DROP TABLE IF EXISTS projects_sales2;
             - DROP TABLE IF EXISTS projects_eng2;
             - DROP TABLE IF EXISTS projects_hr2;
+            - DROP TABLE IF EXISTS projects_fin2;
             - DROP TABLE IF EXISTS projects_default2;
         loadRules:
             - table: projects_with_part_with_fk
@@ -94,7 +100,7 @@ microbenchmark:
                     params: [1, 20]
                   - name: dept
                     util: SeqStringGenFromArray
-                    params: [['Sales','Engineering','HR','Anonymous']]
+                    params: ['Sales','Engineering','HR','Finance','Anonymous']
                   - name: created_at
                     util: RandomDateBtwYears
                     params: [2000,2025]
@@ -110,7 +116,7 @@ microbenchmark:
                     params: [1, 20]
                   - name: dept
                     util: SeqStringGenFromArray
-                    params: [['Sales','Engineering','HR','Anonymous']]
+                    params: ['Sales','Engineering','HR','Finance','Anonymous']
                   - name: created_at
                     util: RandomDateBtwYears
                     params: [2000,2025]
@@ -126,7 +132,7 @@ microbenchmark:
                     params: [1, 20]
                   - name: dept
                     util: SeqStringGenFromArray
-                    params: [['Sales','Engineering','HR','Anonymous']]
+                    params: ['Sales','Engineering','HR','Finance','Anonymous']
                   - name: created_at
                     util: RandomDateBtwYears
                     params: [2000,2025]
@@ -142,7 +148,7 @@ microbenchmark:
                     params: [1, 20]
                   - name: dept
                     util: SeqStringGenFromArray
-                    params: [['Sales','Engineering','HR','Anonymous']]
+                    params: ['Sales','Engineering','HR','Finance','Anonymous']
                   - name: created_at
                     util: RandomDateBtwYears
                     params: [2000,2025]
@@ -161,7 +167,7 @@ microbenchmark:
                     params: [1,100000]
                   - name: project_dept
                     util: SeqStringGenFromArray
-                    params: [['Sales','Engineering','HR','Anonymous']]
+                    params: ['Sales','Engineering','HR','Finance','Anonymous']
                   - name: hired_at
                     util: RandomDateBtwYears
                     params: [2000,2025]
@@ -180,7 +186,7 @@ microbenchmark:
                     params: [1,100000]
                   - name: project_dept
                     util: SeqStringGenFromArray
-                    params: [['Sales','Engineering','HR','Anonymous']]
+                    params: ['Sales','Engineering','HR','Finance','Anonymous']
                   - name: hired_at
                     util: RandomDateBtwYears
                     params: [2000,2025]
@@ -199,7 +205,7 @@ microbenchmark:
                         - query: update projects_with_part_with_fk set dept=? where id=?;
                           bindings:
                             - util: OneStringFromArray
-                              params: [['Sales','Engineering','HR','Anonymous']]
+                              params: ['Sales','Engineering','HR','Finance','Anonymous']
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
@@ -211,7 +217,7 @@ microbenchmark:
                         - query: update projects_with_part_without_fk set dept=? where id=?;
                           bindings:
                             - util: OneStringFromArray
-                              params: [['Sales','Engineering','HR','Anonymous']]
+                              params: ['Sales','Engineering','HR','Finance','Anonymous']
                             - util: PrimaryIntGen
                               params: [1, 100000]
             
@@ -223,7 +229,7 @@ microbenchmark:
                         - query: update projects_without_part_with_fk set dept=? where id=?;
                           bindings:
                             - util: OneStringFromArray
-                              params: [['Sales','Engineering','HR','Anonymous']]
+                              params: ['Sales','Engineering','HR','Finance','Anonymous']
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
@@ -235,7 +241,7 @@ microbenchmark:
                         - query: update projects_without_part_without_fk set dept=? where id=?;
                           bindings:
                             - util: OneStringFromArray
-                              params: [['Sales','Engineering','HR','Anonymous']]
+                              params: ['Sales','Engineering','HR','Finance','Anonymous']
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
