--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G9_range_part_fk_child_part_parent_operations_using_pc.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G9_range_part_fk_child_part_parent_operations_using_pc.yaml
@@ -170,7 +170,7 @@ microbenchmark:
                     queries:
                         - query: update projects_with_part_with_fk set id=id+100000 where created_at=?
                           bindings:
-                            - util: RandomDateBtwYears
+                            - util: CyclicSeqDateGen
                               params: [2001,2025]
             
             - workload: update_without_part_with_fk
@@ -180,7 +180,7 @@ microbenchmark:
                     queries:
                         - query: update projects_without_part_with_fk set id=id+100000 where created_at=?
                           bindings:
-                            - util: RandomDateBtwYears
+                            - util: CyclicSeqDateGen
                               params: [2001,2025]
 
             - workload: update_without_fk
@@ -190,7 +190,7 @@ microbenchmark:
                     queries:
                         - query: update projects_without_fk set id=id+100000 where created_at=?
                           bindings:
-                            - util: RandomDateBtwYears
+                            - util: CyclicSeqDateGen
                               params: [2001,2025]
 
             - workload: delete_with_part_with_fk
@@ -200,7 +200,7 @@ microbenchmark:
                     queries:
                         - query: delete from projects_with_part_with_fk where created_at=?
                           bindings:
-                            - util: RandomDateBtwYears
+                            - util: CyclicSeqDateGen
                               params: [2001,2025]
                             
             - workload: delete_without_part_with_fk
@@ -210,7 +210,7 @@ microbenchmark:
                     queries:
                         - query: delete from projects_without_part_with_fk where created_at=?
                           bindings:
-                            - util: RandomDateBtwYears
+                            - util: CyclicSeqDateGen
                               params: [2001,2025]
 
             - workload: delete_without_fk
@@ -220,5 +220,5 @@ microbenchmark:
                     queries:
                         - query: delete from projects_without_fk where created_at=?
                           bindings:
-                            - util: RandomDateBtwYears
+                            - util: CyclicSeqDateGen
                               params: [2001,2025]
